# UTF8Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UTF8LibConfig  UTF8LibConfig.cmake.in  install.bat  install.sh
Examples/: CMakeLists.txt
Examples/src/: main.cpp
UTF8Lib/: CMakeLists.txt
UTF8Lib/include/: UTF8Char.h  UTF8String.h
UTF8Lib/src/: UTF8Char.cpp  UTF8String.cpp
include/: UTF8Char.h  UTF8LibConfig.h  UTF8String.h
main/UTF8Lib/src/: UTF8Char.cpp
main/main/: CMakeLists.txt
main/main/src/: main.cpp
main/src/: main.cpp
src/: UTF8Char.cpp  UTF8String.cpp
